[gd_scene load_steps=23 format=3 uid="uid://debj51urtdr40"]

[ext_resource type="Script" path="res://scripts/player_big.gd" id="1_5ko5p"]
[ext_resource type="Texture2D" uid="uid://doq5bdnmr6urq" path="res://assets/sprites/player_big.png" id="2_leud1"]
[ext_resource type="Texture2D" uid="uid://bgia1txqxg2wq" path="res://assets/sprites/player_particle.png" id="3_xov5o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gc2bb"]
atlas = ExtResource("2_leud1")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_831ip"]
atlas = ExtResource("2_leud1")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ov6a"]
atlas = ExtResource("2_leud1")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m585"]
atlas = ExtResource("2_leud1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_61a41"]
atlas = ExtResource("2_leud1")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsypl"]
atlas = ExtResource("2_leud1")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7cin"]
atlas = ExtResource("2_leud1")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8524"]
atlas = ExtResource("2_leud1")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_71dny"]
atlas = ExtResource("2_leud1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq17v"]
atlas = ExtResource("2_leud1")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4blm7"]
atlas = ExtResource("2_leud1")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_60bfw"]
atlas = ExtResource("2_leud1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fqj7t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gc2bb")
}],
"loop": true,
"name": &"crouchIdle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_831ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ov6a")
}],
"loop": false,
"name": &"crouching",
"speed": 10.0
}, {
"frames": [{
"duration": 50.0,
"texture": SubResource("AtlasTexture_1m585")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_61a41")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_jsypl")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_61a41")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7cin")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_x8524")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71dny")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_fq17v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71dny")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4blm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60bfw")
}],
"loop": false,
"name": &"stand",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tip0"]
size = Vector2(44, 48)

[sub_resource type="Animation" id="Animation_jqjsq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(44, 48)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:one_way_collision")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hiayt"]
resource_name = "crouch"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(44, 40)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:one_way_collision")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xfos1"]
_data = {
"RESET": SubResource("Animation_jqjsq"),
"crouch": SubResource("Animation_hiayt")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_prd81"]
lifetime_randomness = 0.4
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(20, 15, 1)
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 10.0
initial_velocity_max = 30.0
gravity = Vector3(0, 98, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_syrmh"]
size = Vector2(44, 32)

[node name="PlayerBig" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 9
script = ExtResource("1_5ko5p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fqj7t")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.11714

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 5
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_5tip0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xfos1")
}

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DeathParticles" type="GPUParticles2D" parent="."]
z_index = 5
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_prd81")
texture = ExtResource("3_xov5o")
lifetime = 1.5
one_shot = true
explosiveness = 1.0
collision_base_size = 7.71

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Top" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)

[node name="Bottom" type="RayCast2D" parent="."]
target_position = Vector2(0, 32)

[node name="Left" type="RayCast2D" parent="."]
target_position = Vector2(-22, 0)

[node name="Right" type="RayCast2D" parent="."]
target_position = Vector2(22, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_syrmh")
debug_color = Color(1, 0, 0, 0.419608)

[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
